--- a/build.gradle
+++ b/build.gradle
@@ -16,21 +16,15 @@ repositories {
 }
 
 dependencies {
-//    compile 'org.springframework.boot:spring-boot-starter-jdbc'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-validation'
     compile 'org.springframework.boot:spring-boot-starter-logging'
     compileOnly 'org.springframework.boot:spring-boot-devtools'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+
     compile 'org.elasticsearch:elasticsearch:7.13.2'
     compile 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.13.2'
-//    compile('org.elasticsearch.client:elasticsearch-rest-high-level-client:7.13.2') {
-//        exclude group:'org.elasticsearch:e'
-//    }
+    implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.8.2'
 
-}
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 
-test {
-    useJUnitPlatform()
 }
